objects/promri__c.object
<CustomObject>
    <fields>
        <fullName>field_strength__c</fullName>
        <description>Strength of MRI Scan approved</description>
        <label>Field strength</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.5 T</fullName>
                </value>
                <value>
                    <fullName>3.0 T</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isocenter_position__c</fullName>
        <description>Whether partial or full body is allowed</description>
        <label>Isocenter position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FULL_BODY</fullName>
                </value>
                <value>
                    <fullName>HIP_EYE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>patient__c</fullName>
        <description>Link to patient contact record</description>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Patient</value>
            </filterItems>
            <filterItems>
                <field>Contact.Status__c</field>
                <operation>notEqual</operation>
                <value>Deceased</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ProMRIs</relationshipLabel>
        <relationshipName>ProMRIs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>promri_ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProMRI ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>slewrate__c</fullName>
        <label>Slew rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>whole_body_sar__c</fullName>
        <label>Whole body SAR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ProMRI</label>
    <nameField>
        <displayFormat>ProMRI-{000000}</displayFormat>
        <label>ProMRI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProMRIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>